--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,3 +15,27 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.btn {
+  @apply font-bold py-2 px-4 rounded;
+}
+.btn-blue {
+  @apply bg-blue-500 text-white;
+}
+.btn-blue:hover {
+  @apply bg-blue-700;
+}
+
+.btn-green {
+  @apply bg-green-500 text-white;
+
+}
+
+.btn-red {
+  @apply bg-red-500 text-white;
+}
+
+.btn:hover {
+  @apply bg-gray-300;
+}
+
